<resources>
    <string name="app_name">projetws</string>
    <string name="gestion_etudiants">Gestion des Étudiants</string>
    <string name="ajouter_etudiant">AJOUTER UN ÉTUDIANT</string>
    <string name="liste_etudiants">LISTE DES ÉTUDIANTS</string>
    <string name="nom">Nom :</string>
    <string name="prenom">Prénom :</string>
    <string name="ville">Ville :</string>
    <string name="sexe">Sexe :</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="add">ADD</string>
    <string name="hint_nom">Entrez le nom</string>
    <string name="hint_prenom">Entrez le prénom</string>
</resources>